--- a/liste_courses/index.html
+++ b/liste_courses/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="src/main.js"></script>
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+
+    <header>
+      <h2>COURSESAPP</h2>
+      <a href="liste.html">Ma liste de courses</a>
+    </header>
+    <div>
+      <h1>Produits disponibles</h1>
+      <span id="compteur-produits"></span>
+    </div>
+    <div>
+      <input type="search" placeholder="Rechercher un produit...">
+      <select id="tri">
+        <option value=""></option>
+        <option value="nom">Nom</option>
+        <option value="prix">Prix</option>
+      </select>
+      <button>RÉINITIALISER</button>
+    </div>
+    <ul id="liste-produits">
+    </ul>
   </body>
 </html>
