--- a/liste_courses/index.html
+++ b/liste_courses/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="src/main.js"></script>
+    <link rel="stylesheet" href="src/main.css" />
     <title>Vite App</title>
   </head>
   <body>
@@ -30,4 +30,5 @@
     <ul id="liste-produits">
     </ul>
   </body>
+  <script type="module" src="src/main.js"></script>
 </html>
