--- a/liste_courses/liste.html
+++ b/liste_courses/liste.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="src/liste.js"></script>
     <title>Vite App</title>
+    <link rel="stylesheet" href="src/liste.css" />
   </head>
   <body>
     <header>
